DOC-2335: bump api-version for TinyMCE 7.0.

--- a/modules/ROOT/pages/apis/tinymce.editor.ui.registry.adoc
+++ b/modules/ROOT/pages/apis/tinymce.editor.ui.registry.adoc
@@ -17,17 +17,13 @@ TinyMCE UI registration API.
 |xref:#addAutocompleter[addAutocompleter()]|Registers a new auto completer component. When a configured string pattern
 is matched in the content while typing, the autocompleter will be triggered.
 Emoticons and Charmap use an autocompleter.
-
-
 For information on creating an autocompleter, see:
-link:https://www.tiny.cloud/docs/tinymce/6/autocompleter/[
+link:https://www.tiny.cloud/docs/tinymce/7/autocompleter/[
 UI Components - Autocompleter].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addButton[addButton()]|Registers a new toolbar button that executes a command when clicked or activated
 via keyboard navigation controls.
-
-
 For information on creating a basic toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-basic-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-basic-toolbar-button/[
 UI Components - Types of toolbar buttons: Basic button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addContextForm[addContextForm()]|Registers a new contextual form item.
 Similar to a context menu item, a contextual form is an item with an input
@@ -35,34 +31,24 @@ form element appearing when a content predicate is matched. An example
 of a contextual form is the link plugin when the configuration
 { link_context_toolbar: true } is used. When the cursor is on a link, a
 contextual input form appears allowing for quick changes to the url field.
-
-
 For information on creating context forms, see:
-link:https://www.tiny.cloud/docs/tinymce/6/contextform/[
+link:https://www.tiny.cloud/docs/tinymce/7/contextform/[
 UI Components - Context forms].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addContextMenu[addContextMenu()]|Registers a new context menu section that only appears when a content predicate is matched,
 for example, the cursor is inside a table.
-
-
 For information on creating context menus, see:
-link:https://www.tiny.cloud/docs/tinymce/6/contextmenu/[
+link:https://www.tiny.cloud/docs/tinymce/7/contextmenu/[
 UI Components - Context Menu].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addContextToolbar[addContextToolbar()]|Registers a new context toolbar that only appears when a content predicate is matched for example
 the cursor is on an image element.
-
-
 For information on creating context toolbars, see:
 link:https://www.tiny.cloud/docs/tinymce/6/contexttoolbar/[
 UI Components - Context Toolbar].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addGroupToolbarButton[addGroupToolbarButton()]|Registers a new group toolbar button for the toolbar. Renders a toolbar button that opens a floating toolbar when
 clicked.
-
-
 **Note:** Group toolbar buttons can only be used when using the floating toolbar mode.
-
-
 For information on creating a group toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-group-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-group-toolbar-button/[
 UI Components - Types of toolbar buttons: Group toolbar button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addIcon[addIcon()]|Registers a new SVG icon. The icon name reference can be configured by any
 TinyMCE UI components that can display an icon. The icon is only available
@@ -70,25 +56,19 @@ to the editor instance it was configured for.|`xref:apis/tinymce.editor.ui.regis
 |xref:#addMenuButton[addMenuButton()]|Registers a new menu button. Adds a toolbar button that opens a menu when
 clicked. The menu can be populated by items created by addMenuItem,
 addNestedMenuItem or addToggleMenuItem.
-
-
 For information on creating a toolbar menu button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-menu-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-menu-toolbar-button/[
 UI Components - Types of toolbar buttons: Menu button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addMenuItem[addMenuItem()]|Registers a new menu item that executes a command when clicked or activated
 via keyboard navigation controls.
-
-
 For information on creating a basic menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/creating-custom-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/creating-custom-menu-items/[
 UI Components - Custom menu items: Basic menu items].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addNestedMenuItem[addNestedMenuItem()]|Registers a new menu item that reveals a submenu when clicked or activated
 by keyboard navigation controls.The submenu can be populated by items
 created by addMenuItem, addNestedMenuItem or addToggleMenuItem.
-
-
 For information on creating a nested menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-nested-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-nested-menu-items/[
 UI Components - Custom menu items: Nested menu items].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addSidebar[addSidebar()]|Registers a new sidebar container.
 This sidebar container is attached to the right side of the editor and
@@ -97,31 +77,23 @@ button with the same sidebar name is created. Additionally there is a
 ToggleSidebar command and a 'ToggleSidebar' event that can used to
 manage the sidebar open/closed state. The tinycomments plugin uses a
 sidebar for its Ui components.
-
-
 For information on creating a custom sidebar, see:
-link:https://www.tiny.cloud/docs/tinymce/6/customsidebar/[
+link:https://www.tiny.cloud/docs/tinymce/7/customsidebar/[
 UI Components - Custom sidebar].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
-|xref:#addSplitButton[addSplitButton()]|Registers a new split button for the toolbar. The advanced list plugin uses
+|xref:#addSplitButton[addSplitButton()]|Registers a new split button for the toolbar. The list styles plugin uses
 a split button to simplify its functionality.
-
-
 For information on creating a split toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-split-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-split-toolbar-button/[
 UI Components - Types of toolbar buttons: Split button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addToggleButton[addToggleButton()]|Registers a new toggle button for the toolbar. A toggle buttons state can
 be set in the configuration.
-
-
 For information on creating a toggle toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-toggle-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-toggle-toolbar-button/[
 UI Components - Types of toolbar buttons: Toggle button].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addToggleMenuItem[addToggleMenuItem()]|Registers a new menu item that will act like a toggle button,
 showing a tick in the menu item to represent state.
-
-
 For information on creating a toggle menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-toggle-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-toggle-menu-items/[
 UI Components - Custom menu items: Toggle menu items].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |xref:#addView[addView()]|Registers a new view container.
 This view container is hidden (off) by default and attached next to the main view.
@@ -130,7 +102,10 @@ When it is on, the main editor view is hidden and the specific view is shown.
 When it is off, the specific view is hidden and the main view is shown.
 There is also a ToggleView command.
 The ToggleView command can toggle the view visibility.
-The ToggleView command can be queried for its current state.|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
+The ToggleView command can be queried for its current state.
+For information on creating a custom view, see:
+link:https://www.tiny.cloud/docs/tinymce/7/custom-view/[
+UI Components - Custom view].|`xref:apis/tinymce.editor.ui.registry.adoc[Registry]`
 |===
 
 [[methods]]
@@ -145,10 +120,8 @@ addAutocompleter(name: String, obj: InlineContent.AutocompleterSpec)
 Registers a new auto completer component. When a configured string pattern
 is matched in the content while typing, the autocompleter will be triggered.
 Emoticons and Charmap use an autocompleter.
-
-
 For information on creating an autocompleter, see:
-link:https://www.tiny.cloud/docs/tinymce/6/autocompleter/[
+link:https://www.tiny.cloud/docs/tinymce/7/autocompleter/[
 UI Components - Autocompleter].
 
 ==== Parameters
@@ -166,10 +139,8 @@ addButton(name: String, obj: Toolbar.ToolbarButtonSpec)
 ----
 Registers a new toolbar button that executes a command when clicked or activated
 via keyboard navigation controls.
-
-
 For information on creating a basic toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-basic-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-basic-toolbar-button/[
 UI Components - Types of toolbar buttons: Basic button].
 
 ==== Parameters
@@ -191,10 +162,8 @@ form element appearing when a content predicate is matched. An example
 of a contextual form is the link plugin when the configuration
 { link_context_toolbar: true } is used. When the cursor is on a link, a
 contextual input form appears allowing for quick changes to the url field.
-
-
 For information on creating context forms, see:
-link:https://www.tiny.cloud/docs/tinymce/6/contextform/[
+link:https://www.tiny.cloud/docs/tinymce/7/contextform/[
 UI Components - Context forms].
 
 ==== Parameters
@@ -212,10 +181,8 @@ addContextMenu(name: String, obj: Menu.ContextMenuSpec)
 ----
 Registers a new context menu section that only appears when a content predicate is matched,
 for example, the cursor is inside a table.
-
-
 For information on creating context menus, see:
-link:https://www.tiny.cloud/docs/tinymce/6/contextmenu/[
+link:https://www.tiny.cloud/docs/tinymce/7/contextmenu/[
 UI Components - Context Menu].
 
 ==== Parameters
@@ -233,8 +200,6 @@ addContextToolbar(name: String, obj: Toolbar.ContextToolbarSpec)
 ----
 Registers a new context toolbar that only appears when a content predicate is matched for example
 the cursor is on an image element.
-
-
 For information on creating context toolbars, see:
 link:https://www.tiny.cloud/docs/tinymce/6/contexttoolbar/[
 UI Components - Context Toolbar].
@@ -254,13 +219,9 @@ addGroupToolbarButton(name: String, obj: Toolbar.GroupToolbarButtonSpec)
 ----
 Registers a new group toolbar button for the toolbar. Renders a toolbar button that opens a floating toolbar when
 clicked.
-
-
 **Note:** Group toolbar buttons can only be used when using the floating toolbar mode.
-
-
 For information on creating a group toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-group-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-group-toolbar-button/[
 UI Components - Types of toolbar buttons: Group toolbar button].
 
 ==== Parameters
@@ -303,10 +264,8 @@ addMenuButton(name: String, obj: Toolbar.ToolbarMenuButtonSpec)
 Registers a new menu button. Adds a toolbar button that opens a menu when
 clicked. The menu can be populated by items created by addMenuItem,
 addNestedMenuItem or addToggleMenuItem.
-
-
 For information on creating a toolbar menu button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-menu-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-menu-toolbar-button/[
 UI Components - Types of toolbar buttons: Menu button].
 
 ==== Parameters
@@ -324,10 +283,8 @@ addMenuItem(name: String, obj: Menu.MenuItemSpec)
 ----
 Registers a new menu item that executes a command when clicked or activated
 via keyboard navigation controls.
-
-
 For information on creating a basic menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/creating-custom-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/creating-custom-menu-items/[
 UI Components - Custom menu items: Basic menu items].
 
 ==== Parameters
@@ -346,10 +303,8 @@ addNestedMenuItem(name: String, obj: Menu.NestedMenuItemSpec)
 Registers a new menu item that reveals a submenu when clicked or activated
 by keyboard navigation controls.The submenu can be populated by items
 created by addMenuItem, addNestedMenuItem or addToggleMenuItem.
-
-
 For information on creating a nested menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-nested-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-nested-menu-items/[
 UI Components - Custom menu items: Nested menu items].
 
 ==== Parameters
@@ -372,10 +327,8 @@ button with the same sidebar name is created. Additionally there is a
 ToggleSidebar command and a 'ToggleSidebar' event that can used to
 manage the sidebar open/closed state. The tinycomments plugin uses a
 sidebar for its Ui components.
-
-
 For information on creating a custom sidebar, see:
-link:https://www.tiny.cloud/docs/tinymce/6/customsidebar/[
+link:https://www.tiny.cloud/docs/tinymce/7/customsidebar/[
 UI Components - Custom sidebar].
 
 ==== Parameters
@@ -391,12 +344,10 @@ UI Components - Custom sidebar].
 ----
 addSplitButton(name: String, obj: Toolbar.ToolbarSplitButtonSpec)
 ----
-Registers a new split button for the toolbar. The advanced list plugin uses
+Registers a new split button for the toolbar. The list styles plugin uses
 a split button to simplify its functionality.
-
-
 For information on creating a split toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-split-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-split-toolbar-button/[
 UI Components - Types of toolbar buttons: Split button].
 
 ==== Parameters
@@ -414,10 +365,8 @@ addToggleButton(name: String, obj: Toolbar.ToolbarToggleButtonSpec)
 ----
 Registers a new toggle button for the toolbar. A toggle buttons state can
 be set in the configuration.
-
-
 For information on creating a toggle toolbar button, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-toggle-toolbar-button/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-toggle-toolbar-button/[
 UI Components - Types of toolbar buttons: Toggle button].
 
 ==== Parameters
@@ -435,10 +384,8 @@ addToggleMenuItem(name: String, obj: Menu.ToggleMenuItemSpec)
 ----
 Registers a new menu item that will act like a toggle button,
 showing a tick in the menu item to represent state.
-
-
 For information on creating a toggle menu item, see:
-link:https://www.tiny.cloud/docs/tinymce/6/custom-toggle-menu-items/[
+link:https://www.tiny.cloud/docs/tinymce/7/custom-toggle-menu-items/[
 UI Components - Custom menu items: Toggle menu items].
 
 ==== Parameters
@@ -462,6 +409,9 @@ When it is off, the specific view is hidden and the main view is shown.
 There is also a ToggleView command.
 The ToggleView command can toggle the view visibility.
 The ToggleView command can be queried for its current state.
+For information on creating a custom view, see:
+link:https://www.tiny.cloud/docs/tinymce/7/custom-view/[
+UI Components - Custom view].
 
 ==== Parameters
 
