--- a/modules/ROOT/pages/apis/tinymce.dom.domutils.adoc
+++ b/modules/ROOT/pages/apis/tinymce.dom.domutils.adoc
@@ -48,8 +48,6 @@ available. If it's not, it will fall back to the custom TinyMCE implementation.|
 |xref:#encode[encode()]|Entity encodes a string. This method encodes the most common entities, such as `<`, `>`, `"` and `&`.|`xref:apis/tinymce.dom.domutils.adoc[DOMUtils]`
 |xref:#findCommonAncestor[findCommonAncestor()]|Find the common ancestor of two elements. This is a shorter method than using the DOM Range logic.|`xref:apis/tinymce.dom.domutils.adoc[DOMUtils]`
 |xref:#fire[fire()]|Fires the specified event name and optional object on the specified target.
-
-
 __Deprecated in TinyMCE 6.0 and has been marked for removal in TinyMCE 7.0. Use `dispatch` instead.__|`xref:apis/tinymce.dom.domutils.adoc[DOMUtils]`
 |xref:#get[get()]|Returns the specified element by ID or the input element if it isn't a string.|`xref:apis/tinymce.dom.domutils.adoc[DOMUtils]`
 |xref:#getAttrib[getAttrib()]|Returns the specified attribute by name.|`xref:apis/tinymce.dom.domutils.adoc[DOMUtils]`
@@ -398,8 +396,6 @@ Find the common ancestor of two elements. This is a shorter method than using th
 fire(target: Node | Document | Window, name: String, evt: Object): Event
 ----
 Fires the specified event name and optional object on the specified target.
-
-
 __Deprecated in TinyMCE 6.0 and has been marked for removal in TinyMCE 7.0. Use `dispatch` instead.__
 
 ==== Parameters
@@ -800,7 +796,7 @@ Checks if the specified node is editable within the given context of its parents
 === isEmpty()
 [source, javascript]
 ----
-isEmpty(elements: Object): Boolean
+isEmpty(node: Node, elements: Object): Boolean
 ----
 Returns true/false if the specified node is to be considered empty or not.
 
@@ -812,6 +808,7 @@ tinymce.DOM.isEmpty(node, { img: true });
 
 ==== Parameters
 
+* `node (Node)` - The target node to check if it's empty.
 * `elements (Object)` - Optional name/value object with elements that are automatically treated as non-empty elements.
 
 ==== Return value
