--- a/modules/ROOT/pages/export.adoc
+++ b/modules/ROOT/pages/export.adoc
@@ -8,6 +8,9 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
+[IMPORTANT]
+{productname}'s {pluginname} plugin will be retired and deactivated upon the release of {productname} 7, and will no longer available for purchase. In {productname} 7, the **Export to PDF** and **Export to Word** plugins will provide similar functionality to the {pluginname} plugin.
+
 The {pluginname} plugin adds the ability to export content from the editor to a user's local machine in various formats. For a list of available exporters and information on what they support, see the xref:exporters[Exporters section].
 
 == Interactive example
