DOC-2345 update `upgrading.adoc` page to reflect TinyMCE 7

--- a/modules/ROOT/partials/install/upgrading-info.adoc
+++ b/modules/ROOT/partials/install/upgrading-info.adoc
@@ -1,4 +1,4 @@
-== Upgrading to the latest version of TinyMCE 6
+== Upgrading to the latest version of {productname} {productmajorversion}
 
 The procedure for upgrading to the latest version of {productname} {productmajorversion} depends on the deployment type.
 
