extract note into a partial for reusability

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -3,7 +3,7 @@
 :meta_title: Documentation
 :type: index
 
-NOTE: {productname} {productmajorversion} reached End of Support in April 2023. No more bug fixes, security updates, or new features will be introduced to {productname} {productmajorversion}. We recommend you upgrade to https://www.tiny.cloud/docs/tinymce/latest/upgrading/[{productname} 7^] or consider https://www.tiny.cloud/long-term-support/[{productname} {productmajorversion} Long Term Support (LTS)^] if you need more time.
+include::partial$misc/5x-end-of-support.adoc[]
 
 // 2 Columns, both asciidoc
 [cols=2*a]
