DOC-2334: Replaced `apiKey` that should've been `licenseKey`

--- a/modules/ROOT/partials/integrations/react-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/react-tech-ref.adoc
@@ -194,7 +194,7 @@ Use this when self-hosting {productname} instead of loading from {cloudname}. Fo
 
 *Possible values:* `undefined`, `'gpl'` or a valid {productname} license key
 
-==== Example: using `+apiKey+`
+==== Example: using `+licenseKey+`
 
 [source,jsx]
 ----
