--- a/modules/ROOT/pages/6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.1-release-notes.adoc
@@ -224,7 +224,7 @@ This caused {productname} to present as if an undo option was available when the
 This update fixes this bug. When the Comments plugin loads, the comment model data is no longer placed into an undo level and no Undo actions will present as available until there are actual changes available to undo.
 
 
-==== Opening the comments sidebar via an editor command did not respect the `skipFocus` argument
+==== Opening the comments sidebar via an editor command did not respect the `grabFocus` argument
 
 If the Comments sidebar was opened with an editor command and `grabFocus` was set to true — `editor.execCommand("'tc-open-comment'", false, "showcomments", { grabFocus: true });` — the sidebar still stole focus.
 
