DOC-2348 add note to 6.x docs `index.adoc` pointing to latest TinyMCE docs

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,3 +1,5 @@
 = {productname} {productmajorversion} Documentation
 
+NOTE: You are browsing the {productname} {productmajorversion} documentation. link:https://www.tiny.cloud/docs/tinymce/latest[There is a newer version of {productname} available].
+
 include::partial$what-is-tinymce.adoc[]
