--- a/modules/ROOT/pages/individual-export-to-word-on-premises.adoc
+++ b/modules/ROOT/pages/individual-export-to-word-on-premises.adoc
@@ -1,4 +1,4 @@
-= Deploy the {productname} Export to Word service server-side component using Docker (individually licensed)
+= Deploy the {productname} {pluginname} service server-side component using Docker (individually licensed)
 :navtitle: Export to Word
 :description: Setting up Export to Word using Docker.
 :keywords: server-side, docker, export-to-word, on-premises
