--- a/modules/ROOT/pages/individual-import-from-word-on-premises.adoc
+++ b/modules/ROOT/pages/individual-import-from-word-on-premises.adoc
@@ -1,4 +1,4 @@
-= Deploy the {productname} Import from Word service server-side component using Docker (individually licensed)
+= Deploy the {productname} {pluginname} service server-side component using Docker (individually licensed)
 :navtitle: Import from Word
 :description: Setting up Import from Word using Docker.
 :keywords: server-side, docker, import-from-word, on-premises
