replace plugin category in plugin page

--- a/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
@@ -14,7 +14,7 @@
 // <plugincode>: adds the plugin to an editor configuration.
 // Reference on this page with the {plugincode} variable
 :plugincode: <plugincode>
-:plugincategory: premium|opensource
+:plugincategory: <premium|opensource>
 
 // Remove the line below (and this comment) for open source plugins
 include::partial$misc/admon-premium-plugin.adoc[]
