--- a/-new-material-templates/plugin-documentation-templates/ROOT/partials/configuration/<configuration_option>.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/partials/configuration/<configuration_option>.adoc
@@ -1,12 +1,6 @@
 [[<configuration_option>]]
 == `<configuration_option>`
 
-// Replace all instances of <configuration_option> with the
-// configuration option name then remove this comment.
-
-// Add explanatory material as per the comment block below then remove
-// the block and this comment.
-
 ////
 What does the option do?
 Why use it?
@@ -32,7 +26,7 @@ Are there risks?
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
+  selector: 'textarea',  // change this value according to your HTML
   <configuration_option>: '<value>'
 });
 ----
@@ -52,18 +46,12 @@ tinymce.init({
 ----
 
 // Remove if not applicable.
-// Edit the sub-head to singular or plural as required.
-=== Limitation(s) of the `<configuration_option>` option
+=== Limitation<s> of the `<configuration_option>` option
 
 The `<configuration_option>` option has the following limitations.
-
-// Add explanatory material as per the comment block below then remove
-// the block and this comment.
 
 ////
 Known limitations.
 Complicated scenarios.
 Anything that warrants a CAUTION or WARNING admonition.
 ////
-
-// Remove all comment lines and comment blocks before publishing.
