--- a/-new-material-templates/plugin-documentation-templates/ROOT/partials/menu-item-ids/<plugincode>-menu-items.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/partials/menu-item-ids/<plugincode>-menu-items.adoc
@@ -2,9 +2,6 @@
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
 
-|`+menu-identifier-1+` |<Menu Location 1> |Description one.
-|`+menu-identifier-2+` |<Menu Location 2> |Description two.
-|`+menu-identifier-n+` |<Menu Location n> |Description en.
+|`+menu-item-id-1+` |<Menu Location 1> |<Description one.>
+|`+menu-item-id-2+` |<Menu Location 2> |<Description two.>
 |===
-
-// Remove all comment lines and comment blocks before publishing.
