--- a/modules/ROOT/pages/individual-export-to-pdf-on-premises.adoc
+++ b/modules/ROOT/pages/individual-export-to-pdf-on-premises.adoc
@@ -1,5 +1,26 @@
-= Deploy the {productname} Export to Word service server-side component using Docker (individually licensed)
+= Deploy the {productname} {pluginname} service server-side component using Docker (individually licensed)
 :navtitle: Export to PDF
 :description: Setting up Export to PDF using Docker.
 :keywords: server-side, docker, export-to-pdf, on-premises
 :pluginname: Export to PDF
+
+
+
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-overview.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-requirements.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-fonts.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-autorization.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-api-usage.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-ssl-communication.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-logs.adoc[]
+
+include::partial$individually-licensed-components/export-to-pdf/export-to-pdf-nightly-releases.adoc[]
