--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-nightly-releases.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-nightly-releases.adoc
@@ -8,7 +8,8 @@ Nightly images are released every day. During the automatic release, we run our 
 Nightly images include all of the changes that are merged on our development branches. This allows you to access new features or receive fixes faster than with stable on-premises images.
 
 > Nightly builds are intended only for advanced usage where your use case requires having the new changes as soon as possible. We highly recommend using stable versions of our images.
-+
+
+[WARNING]
 **Before you use nightly images please get familiar with the “Dangers of using nightly builds” section.**
 
 === Dangers of using nightly builds
