--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -389,7 +389,7 @@ More details about this component and the possible values that can be used withi
 === Added `skipFocus` check to the ToggleToolbarDrawer command
 //#TINY-9337
 
-In previous versions of {productname}, the *ToggleToolbarDrawer* command contained an incorrect focus call. As a consequence, this meant that when the *ToggleToolbarDrawer* command option `skipFocus: true` was set the toolbar drawer would take focus when it was not meant to.
+In previous versions of {productname}, the *ToggleToolbarDrawer* command contained an incorrect focus call. As a consequence, when the *ToggleToolbarDrawer* command option `skipFocus: true` was set, the toolbar drawer would take focus when it was not meant to.
 
 In {productname} 6.4.1, an improvement was made to the focusing code which now checks for `skipFocus`.
 
