DOC-2349: Replaced create-react-app keyword with vite

--- a/modules/ROOT/pages/react-cloud.adoc
+++ b/modules/ROOT/pages/react-cloud.adoc
@@ -1,7 +1,7 @@
 = Using TinyMCE from the Tiny Cloud CDN with the React framework
 :navtitle: React
 :description: A guide on integrating TinyMCE from the Tiny Cloud into the React framework.
-:keywords: integration, integrate, react, reactjs, create-react-app, tinymce-react
+:keywords: integration, integrate, react, reactjs, vite, tinymce-react
 :productSource: cloud
 
 include::partial$integrations/react-quick-start.adoc[]
