--- a/modules/ROOT/pages/react-pm-host.adoc
+++ b/modules/ROOT/pages/react-pm-host.adoc
@@ -2,7 +2,7 @@
 :page-aliases: react-pm.adoc
 :navtitle: Using a package manager with hosting
 :description: A guide on integrating the TinyMCE package into the React framework by self-hosting it.
-:keywords: integration, integrate, react, reactjs, create-react-app, tinymce-react, host
+:keywords: integration, integrate, react, reactjs, vite, tinymce-react, host
 :productSource: package-manager
 :productUse: host
 
