--- a/modules/ROOT/pages/react-pm-bundle.adoc
+++ b/modules/ROOT/pages/react-pm-bundle.adoc
@@ -1,7 +1,7 @@
 = Bundling the TinyMCE package with the React framework
 :navtitle: Using a package manager with bundling
 :description: A guide on integrating the TinyMCE package into the React framework by bundling it.
-:keywords: integration, integrate, react, reactjs, create-react-app, tinymce-react, bundle
+:keywords: integration, integrate, react, reactjs, vite, tinymce-react, bundle
 :productSource: package-manager
 :productUse: bundle
 
