--- a/modules/ROOT/pages/react-zip-bundle.adoc
+++ b/modules/ROOT/pages/react-zip-bundle.adoc
@@ -1,7 +1,7 @@
 = Bundling the TinyMCE .zip package with the React framework
 :navtitle: Using a .zip package with bundling
 :description: A guide on integrating a .zip version of TinyMCE into the React framework by bundling it.
-:keywords: integration, integrate, react, reactjs, create-react-app, tinymce-react, bundle
+:keywords: integration, integrate, react, reactjs, vite, tinymce-react, bundle
 :productSource: zip
 :productUse: bundle
 
