--- a/modules/ROOT/pages/react-zip-host.adoc
+++ b/modules/ROOT/pages/react-zip-host.adoc
@@ -2,7 +2,7 @@
 :page-aliases: react-zip.adoc
 :navtitle: Using a .zip package with hosting
 :description: A guide on integrating a .zip version of TinyMCE into the React framework by self-hosting it.
-:keywords: integration, integrate, react, reactjs, create-react-app, tinymce-react, host
+:keywords: integration, integrate, react, reactjs, vite, tinymce-react, host
 :productSource: zip
 :productUse: host
 
